--- a/src/styles/components/app.scss
+++ b/src/styles/components/app.scss
@@ -1,4 +1,3 @@
-// src/Styles/components/app.scss
 
 * {
   margin: 0;
@@ -32,6 +31,17 @@ body {
   justify-content: center;
   align-items: center;
   padding: 20px;
+
+  .connexion-logo {
+    margin-bottom: 40px;
+    
+    .logo {
+      img {
+        max-width: 350px;
+        filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
+      }
+    }
+  }
 
   .auth-toggle {
     margin-bottom: 30px;
